--- a/package.json
+++ b/package.json
@@ -6,26 +6,27 @@
     "@turf/circle": "^5.1.5",
     "@turf/turf": "^5.1.6",
     "axios": "^0.19.2",
-    "body-parser": "^1.18.2",
-    "cors": "^2.8.4",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^4.0.0",
-    "express": "^4.16.2",
-    "express-session": "^1.15.6",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "fsevents": "^2.1.2",
     "geocoder": "^0.2.3",
-    "massive": "^4.4.0",
+    "massive": "^4.8.3",
     "material-ui": "^0.19.4",
-    "passport": "^0.4.0",
+    "passport": "^0.4.1",
     "passport-auth0": "^0.6.0",
-    "react": "^16.0.0",
+    "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-dropdown": "^1.3.2",
-    "react-dropzone": "^4.2.1",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.0",
+    "react-dropdown": "^1.6.4",
+    "react-dropzone": "^4.3.0",
+    "react-redux": "^5.1.2",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^3.3.1",
     "redux": "^3.7.2",
     "redux-promise-middleware": "^4.4.1",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
